# Mastermind

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  genindex.html  mastermind.game.html  mastermind.html  mastermind.main.html  mastermind.players.html  mastermind.storage.html  mastermind.ui.html  mastermind.ui.menu.html  mastermind.utils.html  mastermind.validation.base.html  mastermind.validation.html  mastermind.validation.models.html  modules.html  objects.inv  pom.xml  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/: CODEOWNERS  CONTRIBUTING.md  TROUBLESHOOTING.md
.github/workflows/: changelog.yaml  coverage.yaml  coveralls.yaml  deploy_sphinx.yaml  ossf_scorecard.yml  release_pypi.yaml  release_pypi.yaml.yml
_modules/: index.html
_modules/mastermind/game/: board.html  game.html  game_flow.html  game_parameter.html  player_logic.html
_modules/mastermind/main/: game_controller.html  game_history.html  game_storage.html  main.html
_modules/mastermind/players/: abstract_player.html  ai_player.html  external_player.html  human_player.html
_modules/mastermind/storage/: persistent_cache.html  pickle_io.html  user_data.html
_modules/mastermind/ui/menu/: base_menu.html  data_menu.html  game_history_menu.html  main_menu.html  new_game_menu.html  option_menu.html  resume_game_menu.html
_modules/mastermind/utils/: get_feedback.html  render_dataframe.html  stack.html
_modules/mastermind/validation/base/: base.html  exceptions.html  numeric.html  semi_mutable.html  validated_class.html
_modules/mastermind/validation/models/: numeric.html  valid_combination.html  valid_feedback.html
_sources/: mastermind.storage.rst.txt  mastermind.ui.menu.rst.txt  mastermind.utils.rst.txt
archive/src/mastermind/game/: board.py
archive/src/mastermind/main/: game_storage.py
archive/src/mastermind/players/: ai_player.py  human_player.py
archive/src/mastermind/storage/: __init__.py  pickle_io.py
archive/tests/game/: test_game.py  test_game_flow.py
archive/tests/main/: test_game_controller.py  test_game_history.py  test_game_storage.py
archive/tests/players/: test_abstract_player.py  test_external_player.py  test_human_player.py
archive/tests/storage/: test_pickle_io.py
archive/tests/ui/menu/: test_base_menu.py  test_data_menu.py  test_new_game_menu.py
archive/tests/validation/base/: test_base.py  test_validated_class.py
archive/tests/validation/models/: test_valid_combination.py
design/: Software Architecture Design.md
docs/design/: Software Architecture Design.md  Software Requirement Specification.md
examples/: README.md  install.bat  install.sh  mastermind_in_colab.ipynb  uninstall.bat  uninstall.sh
src/: build.py  requirements.txt
src/benchmarks/java/org.mastermind/: BestGuessBenchmark.java  ExpectedSizeBenchmark.java  FeedbackBenchmark.java  SampledCodeBenchmark.java
src/java/: Feedback.java
src/main/java/org.mastermind/: AllValidCode.java  BestGuess.java  Canonical.java  CanonicalCode.java  Demo.java  ExpectedSize.java  (+6 more)
src/mastermind/database/: __init__.py  game_repository.py
src/mastermind/display/: __init__.py
src/mastermind/main/: game_controller.py  game_history.py  main.py
src/mastermind/players/: abstract_player.py
src/mastermind/server/: __init__.py
src/mastermind/storage/: persistent_cache.py  user_data.py
src/mastermind/utils/: __init__.py  callable_dot_dict.py  callable_string.py  dot_dict.py  enum_meta.py  serialize_dataclass.py  serialize_enum.py
src/tests/: conftest.py  test_cattrs_multifiles_handler.py  test_game_repository.py  test_game_service.py
src/tests/libs/: test_game_repository.py  test_game_service.py
tests/game/: test_board.py  test_game_flow.py  test_game_parameter.py  test_player_logic.py
tests/java/: FeedbackTest.java
tests/main/: test_game_controller.py  test_game_history.py  test_game_storage.py  test_main.py
tests/players/: test_abstract_player.py  test_ai_player.py
tests/storage/: test_persistent_cache.py  test_user_data.py
tests/ui/menu/: test_data_menu.py  test_game_history_menu.py  test_main_menu.py  test_option_menu.py  test_resume_game_menu.py
tests/utils/: test_get_feedback.py  test_render_dataframe.py  test_stack.py
tests/validation/base/: test_numeric.py  test_semi_mutable.py
tests/validation/models/: test_game_utils.py  test_numeric.py  test_valid_feedback.py
(+263 files in other folders)
