[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mastermind-ai"
version = "2.0.1-beta"
requires-python = ">=3.12"
authors = [{ name = "FlysonBot" }]

# Descriptions
description = "A Python package that simulates the Mastermind game with an AI solver."
readme = "README.md"

# Tags
keywords = ["mastermind", "game", "ai", "puzzle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

# Dependencies
dependencies = [
    "install-jdk>=1.1.0",
    "JPype1>=1.5.0",
    #"appdirs>=1.4.4",
    #"clear-screen>=0.1.14",
    #"pandas>=2.2.2",
    #"attrs>=24.3.0",
    #"cattrs>=24.1.2",
    #"shortuuid>=1.0.13",
]

[project.urls]
Homepage = "https://github.com/FlysonBot/Mastermind"
Documentation = "https://flysonbot.github.io/Mastermind/"
Repository = "https://github.com/FlysonBot/Mastermind"
Issues = "https://github.com/FlysonBot/Mastermind/issues"
Changelog = "https://github.com/FlysonBot/Mastermind/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["mastermind"]
package-dir = { "" = "src/main/python" }

[project.scripts]
mastermind = "mastermind.main:main"
