[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mastermind-ai"
version = "2.2.2"
requires-python = ">=3.12"
authors = [{ name = "FlysonBot" }]

# Descriptions
description = "A Python package that simulates the Mastermind game with a powerful solver, with support for game for up to 9 colors and 9 pegs."
readme = "README.md"

# Tags
keywords = ["mastermind", "game", "puzzle"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

# Dependencies
dependencies = [
    "install-jdk>=1.1.0",
    "JPype1>=1.5.0",
    "rich>=14.3.3",
]

[project.urls]
Homepage = "https://github.com/FlysonBot/Mastermind"
Repository = "https://github.com/FlysonBot/Mastermind"
Issues = "https://github.com/FlysonBot/Mastermind/issues"

[tool.setuptools.packages.find]
where = ["src/main/python"]

[tool.pytest.ini_options]
pythonpath = ["src/main/python"]
testpaths = ["src/test/python"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools]
package-data = { mastermind = ["*.jar", "jre/*.zip"] }

[project.scripts]
mastermind = "mastermind.main:main"
